@@ -1,3 +1,4 @@
+0.8.0 @12/13/2001 22:15:00 GMT@
 0.7.1 @12/13/2001 21:40:00 GMT@
 0.7.0 @12/13/2001 2:21:21 CST@
 0.6.2 @12/11/2001 17:34:00 CST@
